# Samaaj-Backend

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  schemas.py
ai/: __init__.py  ingestion.py  rag.py  vector_store.py
core/: config.py  database.py  security.py
routers/: __init__.py  auth.py  chat.py  communities.py  documents.py
