[project]
name = "samaaj-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pypdf>=6.10.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
]
